# crawlerpy1

./: pyproject.toml  requirements.txt
crawlergo/: __init__.py  browser.py  cli.py  config.py  domain_collect.py  filter.py  http_client.py  js_scripts.py  logger.py  model.py  path_expansion.py  tab.py  task.py  utils.py
examples/: basic_usage.py  custom_cookie.py  with_proxy.py
